[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/skybox.png" type="Texture" id=1]
[ext_resource path="res://assets/nasalization-rg.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Player.png" type="Texture" id=3]
[ext_resource path="res://HomePage.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 115
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.588235, 0.0980392, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.235294, 0.0980392, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.588235, 0.0980392, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=7]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.733333 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="DynamicFont" id=10]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=11]
resource_name = "Loading"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 1.5 ),
"transitions": PoolRealArray( 2.5, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="HomeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skybox" type="Sprite" parent="."]
position = Vector2( 513.521, 323.965 )
texture = ExtResource( 1 )

[node name="NEORetrieval" type="RichTextLabel" parent="."]
anchor_left = 0.08
anchor_top = 0.2
anchor_right = 0.92
anchor_bottom = 0.45
margin_left = -2.32439
margin_top = 1.0452
margin_right = -2.73242
margin_bottom = 1.44519
custom_fonts/normal_font = SubResource( 1 )
text = "NEO Retrieval"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsLabel" type="RichTextLabel" parent="."]
anchor_left = 0.2
anchor_top = 0.42
anchor_right = 0.8
anchor_bottom = 0.5
custom_fonts/normal_font = SubResource( 2 )
text = "created by Corwin Phung and Evan Cheung"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.2
anchor_top = 0.55
anchor_right = 0.45
anchor_bottom = 0.7
margin_left = -0.00788116
margin_top = 0.0444946
margin_bottom = 0.244507
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoButton" type="Button" parent="."]
anchor_left = 0.55
anchor_top = 0.55
anchor_right = 0.8
anchor_bottom = 0.7
margin_left = -0.00788116
margin_top = 0.0444946
margin_bottom = 0.244507
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 7 )
text = "Info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayIcon" type="Sprite" parent="."]
position = Vector2( 330, 517 )
scale = Vector2( 0.147015, 0.147015 )
texture = ExtResource( 3 )
offset = Vector2( 0, -181.593 )

[node name="InfoIcon" type="Sprite" parent="."]
position = Vector2( 690, 517 )
scale = Vector2( 0.147015, 0.147015 )
texture = ExtResource( 3 )
offset = Vector2( 0, -181.593 )

[node name="InfoScreen" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageSpace" type="Panel" parent="InfoScreen"]
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.8
margin_right = 40.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameDescription" type="RichTextLabel" parent="InfoScreen/MessageSpace"]
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 10 )
text = "Near Earth Objects (NEOs) are objects whose orbits come close to  intersecting with Earth. Your job is to pilot a spaceship and retrieve these objects using a special grappling tool in order to prevent the Earth from potential danger. 

Use the UP and DOWN buttons to pilot your ship, and the SPACE button to fire the hook. Be careful though, you'll lose fuel over time, and crashing into the NEOs will cause you to take damage!
(click outside this box to continue)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.999023 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Loading = SubResource( 11 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
